# config/routes.rb
@@ -15,7 +15,7 @@ Rails.application.routes.draw do
 
   namespace :api do
     namespace :v1 do
-      resources :categories, only: %i[index]
+      resources :categories, only: %i[index create]
       resources :users, only: %i[show update]
     end
   end
